--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,37 @@ body {
   background-color: rgb(193, 239, 239); 
 }
 
+.positionCenter {
+  transform: translateY(-50%) translateX(-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 90%;
+}
+
+.bg {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.fadeDown{
+  animation-name:fadeDownAnime;
+  animation-duration:0.5s;
+  animation-fill-mode:forwards;
+  opacity:0;
+  }
+  
+  @keyframes fadeDownAnime{
+    from {
+      opacity: 0;
+    transform: translateY(-100px);
+    }
+  
+    to {
+      opacity: 1;
+    transform: translateY(0);
+    }
+  }
+
+  .primary {
+    color: peru;
+  }
