コンポーネント作成

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 
 body {
-  background-color: rgb(193, 239, 239); 
+  background-image: url("https://source.unsplash.com/random");
 }
 
 .positionCenter {
